prevent scrollbar from disappearing when dialog is open

--- a/client/src/app/_styles/globals.css
+++ b/client/src/app/_styles/globals.css
@@ -2,4 +2,5 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--color-secondary);
+  overflow-y: scroll;
 }
